runs path added, paths replaced with envs, writing to params sorted, main refactored

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ REGISTRY_PATH=../artifacts/registry
 IMAGES_PATH=../images
 FEATURES_PATH=../conf
 TENSORBOARDS_PATH=../tensorboards
+RUNS_PATH=../runs
